--- a/webclient/app/sass/style.sass
+++ b/webclient/app/sass/style.sass
@@ -523,11 +523,12 @@ fieldset fieldset
 
 .plugin-icon
   float: left
-  margin: 1em
+  display: block
+  width: 101%
+  margin: 0px 5px 10px 0px
   font-size: 1.5em
   img
     vertical-align: middle
-    margin: 0.5em
 
 img.small-working-icon
   width: 20px
@@ -539,10 +540,10 @@ img.small-working-icon
 
 td
   &.icon, &.checkbox
-    text-align: center
+    text-align: left
 
 th.checkbox
-  text-align: center
+  text-align: left
 
 tr
   &.odd
