--- a/plugins/services/app/views/services/index.rhtml
+++ b/plugins/services/app/views/services/index.rhtml
@@ -188,7 +188,7 @@ function enable_buttons (s) {
     .pad1_2em { padding: 1em 2em; }
 </style>
 
-<div class='plugin-icon'><img src='/icons/yast-system.png' alt=''/><%= _("System Services") %></div>
+<div class='plugin-icon'><img src='/icons/yast-system.png' alt=''/><%= _("System Services") %><span id="questionMark">?</span></div>
 
 <div class="plugin-content">
 
