--- a/plugins/software/app/views/repositories/index.html.erb
+++ b/plugins/software/app/views/repositories/index.html.erb
@@ -38,12 +38,12 @@
   </style>
 <% end %>
 
-<div class='plugin-icon'><img src='/icons/yast-online_update.png'/><%=_("Software Repositories") %></div>
+<div class='plugin-icon' style="display:block; width:101%; padding:0;"><img src='/icons/yast-online_update.png'/><%=_("Software Repositories") %><span id="questionMark" style="vertical-align:middle; float:right; margin:15px 0px 0px 0px;">?</span></div>
 <div class='plugin-content'>
   <div class="loading"></div>
   <% disabled = !@permissions[:write] %>
 
-  <h3 style="margin-left:12px;"><%=_("Configured software repositories") %> <span id="questionMark" style="float:right; margin: 2px 12px;">?</span></h3>
+<!--   <h3 style="margin-left:12px;"><%=_("Configured software repositories") %><span id="questionMark" style="float:right; margin: 2px 12px;">?</span></h3> -->
   
 
   <div id="softwarebar">
@@ -63,7 +63,7 @@
     <div id="link-container">
 	<% if !disabled %>
 	  <div id="action_links" class="action_links">	
-	    <%= link_to image_tag("/icons/yast-online_update.png", :class=>"icons button") +  (_("Add New Repository") ), {:action => 'add'}, :onclick=>"$('#progress').show()" %>
+	    <%= link_to image_tag("/icons/yast-online_update.png", :class=>"icons button") +  (_("New Repository") ), {:action => 'add'}, :onclick=>"$('#progress').show()" %>
 	  </div>
 	<% end %>
     </div>
