--- a/webclient/public/stylesheets/online-help.css
+++ b/webclient/public/stylesheets/online-help.css
@@ -14,6 +14,9 @@
   -webkit-border-radius:100%; 
   -moz-border-radius:100%; 
 
+  float:right;
+  margin:15px 0px 0px 0px;
+    
   background: -moz-linear-gradient(center top , #aaa 10%, #888 30%, #777 51%, #666 100%) repeat scroll 0 0 transparent;
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0.10, #aaa), color-stop(0.30, #888), color-stop(0.51, #777), color-stop(1.00, #666));
   text-shadow: 0 -1px 0 #222;
@@ -33,7 +36,7 @@
 #onlineHelpContent {
   margin-left:4px;
   width:40%;
-  top:25%;
+  top:22%;
   left:30%;
 
   font-size:12px;
