- replaced control panel header background

--- a/webclient/app/sass/style.sass
+++ b/webclient/app/sass/style.sass
@@ -178,9 +178,11 @@ ul li
 
 #header
   width: 100%
-  background: !c_header url('images/bg-head-gradient.png') repeat-x scroll 0 0
-  border-bottom: 1px solid mix(!c_black, !c_header, 40%)
+  //background: !c_header url('images/bg-head-gradient.png') repeat-x scroll 0 0
+  //border-bottom: 1px solid mix(!c_black, !c_header, 40%)
+  background-color: #C5C5C5
   height: 50px
+  vartical-align: middle
   text-align: center
   position: relative
   *
