- removed inline css for control panel header

--- a/webclient/app/views/layouts/main.rhtml
+++ b/webclient/app/views/layouts/main.rhtml
@@ -135,7 +135,7 @@
 	</span>
       <% end -%>
 
-      <h1 style="text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.2), 0 1px 0 rgba(225, 225, 225, 0.9);"><%= appliance_label %></h1>
+      <h1><%= appliance_label %></h1>
     </div>
 
     <div id="timeoutMessage">
