--- a/webclient/app/sass/style.sass
+++ b/webclient/app/sass/style.sass
@@ -186,7 +186,9 @@ ul li
   text-align: center
   position: relative
   *
-    color: !c_text
+    //color: !c_text
+    color: #444
+    text-shadow: 0 1px 0 #fff
   h1
     margin: 0
     padding-top: 13px
