--- a/webclient/app/sass/style.sass
+++ b/webclient/app/sass/style.sass
@@ -178,15 +178,15 @@ ul li
 
 #header
   width: 100%
-  //background: !c_header url('images/bg-head-gradient.png') repeat-x scroll 0 0
-  //border-bottom: 1px solid mix(!c_black, !c_header, 40%)
+  /*background: !c_header url('images/bg-head-gradient.png') repeat-x scroll 0 0
+  /*border-bottom: 1px solid mix(!c_black, !c_header, 40%)
   background-color: #C5C5C5
   height: 50px
   vartical-align: middle
   text-align: center
   position: relative
   *
-    //color: !c_text
+    /*color: !c_text
     color: #444
     text-shadow: 0 1px 0 #fff
   h1
