--- a/webclient/public/stylesheets/new_inputs.css
+++ b/webclient/public/stylesheets/new_inputs.css
@@ -789,7 +789,9 @@ input#find_user {
 }
 
 /* MOVED FROM ROLES INDEX.rhtml */
-label.error { font-size:11px; margin:0px; }
+/* label.error {  } */
+label.error { font-size:11px; margin:0px; float:none; display:inline; font-weight:bold; color:#990000; padding-left:.5em; vertical-align:middle; }
+
 input.error { float: none;}
 .ui-dialog-content { overflow-y: auto; }  
 .permission-label { width: 22em; float: left; cursor: pointer; }
