--- a/plugins/network/app/views/network/index.html.erb
+++ b/plugins/network/app/views/network/index.html.erb
@@ -53,14 +53,14 @@
 	<style type="text/css">
 	 /* TODO move to style.css fix for validation */
 	 .ui-accordion .ui-accordion-content {padding:1em 0px;}
-	 label.error {
+/*	 label.error {
 		float:none;
 		display:inline;
 		font-weight:bold;
 		color:#990000;
 		padding-left:.5em;
 		vertical-align:middle;
-	 }
+	 }*/
 	 label.valid { 
 		background: url('../images/checked.gif') no-repeat;
 		padding:0px 0px 0px 18px;
